--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "commonjs",
+  "homepage": "https://hmid-mhmdi.github.io/telegram-game-react/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
