--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://hmid-mhmdi.github.io/telegram-game-react",                      
+  "url": "https://localhost:5173",                      
   "name": "Telegram Game",                    
   "iconUrl": "https://gray-tricky-rabbit-584.mypinata.cloud/ipfs/Qma1WZGW9Kw834ucXFZToRbe7bLgNXWq1LLi4SnydiWtQi"            
 }
